fixes done and text alignment issue resolved

--- a/BTalaqa/MCQAssignmentsApp/static/css/custom/test-view.css
+++ b/BTalaqa/MCQAssignmentsApp/static/css/custom/test-view.css
@@ -20,3 +20,16 @@ color:green;
 
 visibility: hidden;
 }
+
+
+label {
+   position:relative;
+   padding-left:50px;
+    display:block;
+}
+
+label input[type=radio] {
+   position:absolute;
+   top:-6px;
+   left:0px;
+}
